--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
   border-bottom: 2px solid black !important;
 }
 
+.navbar .navbar-nav {
+  cursor: pointer !important;
+}
 .carousel {
   width: 100%;
   height: fit-content !important;
@@ -49,4 +52,13 @@
 
 .welcome-box .welcome-text {
   margin: 0px 20px 0px 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .welcome-box {
+    display: block;
+  }
+  .welcome-text {
+    text-align: center;
+  }
 }
